# ezmenulib

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
examples/: basic_menu.rs  basic_rawmenu.rs  basic_selectmenu.rs  basic_tuimenu.rs  basic_valuemenu.rs  derive_test.rs  dynamic_rawmenu.rs  dynamic_tuimenu.rs  gen_license.rs  retrieve_values.rs  selected_values.rs  tui_menu.rs
examples/mklicense/: Cargo.toml
examples/mklicense/src/: main.rs
ezmenu-derive/: Cargo.toml  LICENSE
ezmenu-derive/src/: lib.rs  struct_field.rs  struct_impl.rs  utils.rs
ezmenu-macros/: Cargo.toml
ezmenu-macros/src/: bound.rs  format.rs  generics.rs  kw.rs  lib.rs  menu.rs  pretend.rs  prompted.rs  select.rs  utils.rs
ezmenu-macros/src/menu/: tui.rs  tui_block.rs
ezmenu-macros/src/prompted/: promptable.rs  select.rs
menu/: Cargo.toml
menu-derive/: Cargo.toml
menu-derive/src/: lib.rs
menu/src/: lib.rs
src/: _main.rs  cursive.rs  customs.rs  field.rs  field_tests.rs  lib.rs  main.rs  menu.rs  menuvec.rs  query.rs  tests.rs  tui.rs  utils.rs
src/customs/: tests.rs
src/field/: query.rs  tests.rs
src/menu/: handle.rs  stream.rs  tui_run.rs
src/menu/tests/: menu_stream.rs  mod.rs  select_menu.rs  value_menu.rs  values.rs
src/menu/tui_run/: event.rs  utils.rs
src/tests/: field.rs  menu.rs
src/tui/: crossterm.rs  event.rs  mod.rs  termion.rs
tests/: Cargo.toml  base_impl.rs  customs.rs  menu_attr.rs  menu_stream.rs  select_menu.rs  value_menu.rs
tests/src/: lib.rs  main.rs
