[package]
name = "ezmenulib"
version = "0.3.0"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenulib"
description = "Easy CLI menu building tool."
repository = "https://github.com/ahbalbk/ezmenulib"
categories = ["command-line-interface"]
keywords = ["cli", "menu", "interface"]
license = "MIT"
readme = "README.md"
exclude = [
    "tests/*"
]

[lib]
name = "ezmenulib"

[package.metadata.docs.rs]
all-features = true

[dependencies.meval]
version = "0.2.0"
optional = true
default-features = false 

[dependencies.crossterm]
version = "0.24.0"
optional = true
default-features = false

[dependencies.cursive]
version = "0.18.0"
optional = true
default-features = false

[dependencies.termion]
version = "1.5.6"
optional = true
default-features = false

[dependencies.tui]
version = "0.18.0"
optional = true
default-features= false

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = []
expr = ["dep:meval"]
crossterm = ["dep:crossterm", "tui?/crossterm"]
termion = ["dep:termion", "tui?/termion"]

[[example]]
name = "basic_tuimenu"
required-features = ["tui", "crossterm"]

[[example]]
name = "dynamic_tuimenu"
required-features = ["tui", "crossterm"]