[package]
name = "ezmenulib"
version = "0.3.0"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenulib"
description = "Easy CLI menu building tool."
repository = "https://github.com/ahbalbk/ezmenulib"
categories = ["command-line-interface"]
keywords = ["cli", "menu", "interface"]
license = "MIT"
readme = "README.md"
exclude = [
    "tests/*"
]

[lib]
name = "ezmenulib"

[package.metadata.docs.rs]
all-features = true

[dependencies.meval]
version = "0.2.0"
optional = true
default-features = false 

[dependencies.crossterm]
version = "0.24.0"
optional = true
default-features = false

[dependencies.termion]
version = "1.5.6"
optional = true
default-features = false

[dependencies.tui]
version = "0.18.0"
optional = true
default-features= false

[dependencies.ezmenu-macros]
version = "0.1.0"
optional = true
path = "ezmenu-macros"

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = []
derive = ["dep:ezmenu-macros"]
expr = ["dep:meval"]
crossterm = ["dep:crossterm", "tui?/crossterm"]
termion = ["dep:termion", "tui?/termion"]

[[example]]
name = "basic_tuimenu"
required-features = ["tui", "crossterm"]

[[example]]
name = "dynamic_tuimenu"
required-features = ["tui", "crossterm"]

[dev-dependencies]
chrono = "0.4.19"
