[package]
name = "ezmenulib"
version = "1.0.0"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenulib"
description = "Easy CLI menu building tool."
repository = "https://github.com/ahbalbk/ezmenulib"
categories = ["command-line-interface"]
keywords = ["cli", "menu", "interface"]
license = "MIT"
readme = "README.md"

[lib]
name = "ezmenulib"

[dependencies]
rpassword = { version = "7.0.0", default-features = false, optional = true }
termion = { version = "1.5.6", default-features = false, optional = true }
tui = { version = "0.19.0", default-features = false, optional = true }
crossterm = { version = "0.25.0", default-features = false, optional = true }
ezmenu-macros = { version = "0.1.0", path = "ezmenu-macros", default-features = false, optional = true }
once_cell = { version = "1.14.0", optional = true }
parking_lot = { version = "0.12.1", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = ["derive", "password"]
derive = ["dep:ezmenu-macros"]
password = ["dep:rpassword"]
tui = ["dep:tui", "ezmenu-macros?/tui"]
crossterm = ["dep:crossterm", "tui?/crossterm"]
termion = ["dep:termion", "tui?/termion"]
extra-globals = [ "dep:once_cell", "dep:parking_lot"]

[[example]]
name = "basic_tuimenu"
required-features = ["tui", "crossterm"]

[[example]]
name = "dynamic_tuimenu"
required-features = ["tui", "crossterm"]

[dev-dependencies]
chrono = "0.4.19"
