[package]
name = "ezmenu-derive"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenu-derive"
description = "Builds a CLI menu with a derive."
repository = "https://github.com/ahbalbk/ezmenu"
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["extra-traits"] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.15"
