[package]
name = "ezmenu-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.40"
spelling_corrector = "0.2.3"
