[package]
name = "ezmenu-macros"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenulib"
description = "Easy CLI menu building tool."
repository = "https://github.com/ahbalbk/ezmenulib"
categories = ["command-line-interface"]
keywords = ["cli", "menu", "interface"]
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.40"
concat-idents = "1.1.3"

[features]
tui = []